# DubForge

./: .env.example  .gitignore  .npmrc  .prettierignore  LICENSE  PROJECT_STATUS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json
.cursor/rules/: 01-project.mdc  02-typescript.mdc  03-react.mdc  04-electron.mdc  05-python.mdc  06-ui.mdc  07-testing.mdc  08-git.mdc  09-ai-pipeline.mdc  10-security.mdc  11-review.mdc
.github/workflows/: ci.yml
apps/desktop/: electron.vite.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/desktop/src/main/: container.ts  index.ts
apps/desktop/src/main/ipc/: model-handlers.ts  pipeline-handlers.ts  video-handlers.ts
apps/desktop/src/main/services/: asset-registry-paths.ts  desktop-asset-stack.ts  desktop-media-stack.ts  desktop-model-service.ts  ffprobe-service.ts  pipeline-job-service.ts  recent-files-service.ts  (+3 more)
apps/desktop/src/preload/: api.ts  index.ts
apps/desktop/src/renderer/: index.html
docs/: ARCHITECTURE.md  DECISIONS.md  DELIVERY.md  DEPENDENCY_INJECTION.md  DEPENDENCY_POLICY.md  PIPELINE.md  PRD.md  PROMPTS.md  TASKS.md  TECH_STACK.md  UI_SPEC.md
python/: README.md  pyproject.toml
python/dubforge_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/models/: __init__.py
python/providers/: __init__.py
python/tests/: test_workspace.py
python/utils/: __init__.py
python/workers/: __init__.py
scripts/: bootstrap.sh  rebuild-sqlite-for-node.mjs
tests/e2e/: app.spec.ts
(+55 files in other folders)
